--- a/nexus-core/pom.xml
+++ b/nexus-core/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>nexus-client</artifactId>
+	<artifactId>nexus-core</artifactId>
 	<packaging>jar</packaging>
 
 	<parent>
@@ -12,29 +12,14 @@
 		<version>${revision}</version>
 	</parent>
 
-	<name>Nexus Client</name>
-	<description>A Java REST client for Nexus repository.</description>
+	<name>Nexus Core</name>
+	<description>Collection of shared high level operations.</description>
 	<url>https://ghunteranderson.com</url>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.ghunteranderson</groupId>
 			<artifactId>jsemver</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.core</groupId>
-			<artifactId>jersey-client</artifactId>
-			<version>2.29.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.inject</groupId>
-			<artifactId>jersey-hk2</artifactId>
-			<version>2.29.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.media</groupId>
-			<artifactId>jersey-media-json-jackson</artifactId>
-			<version>2.29.1</version>
 		</dependency>
 	</dependencies>
 
