Adding DI for plugins that is Maven session aware.

--- a/nexus-core/pom.xml
+++ b/nexus-core/pom.xml
@@ -21,6 +21,11 @@
 			<groupId>com.ghunteranderson</groupId>
 			<artifactId>jsemver</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.ghunteranderson.nexus</groupId>
+			<artifactId>rest-client</artifactId>
+			<version>${revision}</version>
+		</dependency>
 	</dependencies>
 
 </project>
