--- a/nexus-maven-plugin/pom.xml
+++ b/nexus-maven-plugin/pom.xml
@@ -22,7 +22,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.ghunteranderson.nexus</groupId>
-			<artifactId>nexus-client</artifactId>
+			<artifactId>rest-client</artifactId>
 			<version>${revision}</version>
 		</dependency>
 		<dependency>
@@ -40,6 +40,11 @@
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-core</artifactId>
 			<version>3.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ghunteranderson.nexus</groupId>
+			<artifactId>nexus-core</artifactId>
+			<version>${revision}</version>
 		</dependency>
 	</dependencies>
 
