--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,13 @@
 # Log file
 *.log
 
-# BlueJ files
+# IDE files
 *.ctxt
+.settings
+.project
+.classpath
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Build Files
 *.jar
 *.war
 *.nar
@@ -18,6 +18,8 @@
 *.zip
 *.tar.gz
 *.rar
+target
+.flattened-pom.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
