Adding project info to poms.

--- a/nexus-core/pom.xml
+++ b/nexus-core/pom.xml
@@ -16,6 +16,19 @@
 	<description>Collection of shared high level operations.</description>
 	<url>https://ghunteranderson.com</url>
 
+	<developers>
+		<developer>
+			<name>G. Hunter Anderson</name>
+			<email>ghunteranerson@gmail.com</email>
+		</developer>
+	</developers>
+
+	<scm>
+		<connection>scm:git:git://github.com/ghunteranderson/nexus-tools.git</connection>
+		<developerConnection>scm:git:ssh://github.com:ghunteranderson/nexus-tools.git</developerConnection>
+		<url>https://github.com/ghunteranderson/nexus-tools/tree/master</url>
+	</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.ghunteranderson</groupId>
