--- a/rest-client/pom.xml
+++ b/rest-client/pom.xml
@@ -6,6 +6,7 @@
 	<artifactId>rest-client</artifactId>
 	<packaging>jar</packaging>
 
+
 	<parent>
 		<groupId>com.ghunteranderson.nexus</groupId>
 		<artifactId>nexus-tools-parent</artifactId>
@@ -15,6 +16,19 @@
 	<name>Nexus Rest Client</name>
 	<description>A Java REST client for Nexus repository.</description>
 	<url>https://ghunteranderson.com</url>
+
+	<developers>
+		<developer>
+			<name>G. Hunter Anderson</name>
+			<email>ghunteranerson@gmail.com</email>
+		</developer>
+	</developers>
+
+	<scm>
+		<connection>scm:git:git://github.com/ghunteranderson/nexus-tools.git</connection>
+		<developerConnection>scm:git:ssh://github.com:ghunteranderson/nexus-tools.git</developerConnection>
+		<url>https://github.com/ghunteranderson/nexus-tools/tree/master</url>
+	</scm>
 
 	<dependencies>
 		<dependency>
