--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,15 @@
 						<goals>
 							<goal>flatten</goal>
 						</goals>
+						<configuration>
+							<pomElements>
+								<name/>
+								<description/>
+								<url/>
+								<developers/>
+								<scm/>
+							</pomElements>
+						</configuration>
 					</execution>
 					<execution>
 						<id>flatten.clean</id>
